syntax = "proto3";
package com.chainsync.common;
import "google/protobuf/any.proto";

message ErrorDetail {
  // Error code (our own code)
  string code = 1;
  //Error message
  string message = 2;
  // Additional metadata associated with the Error
  map<string, string> metadata = 3;
}